spacing correction

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -296,7 +296,7 @@
     box-shadow: 0px 0px 9px #00000038;
     border-radius: 8px;
     border: 1px solid #e2e6ea;
-    margin-bottom: 185px;
+    margin-bottom: 57px;
     background: #F9F9F9 0% 0% no-repeat padding-box;
     opacity:1;
   }
